Update README, more tests

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -1,5 +1,4 @@
 scheduled_task_job:
-  # TODO: Move this to every day 8:00 AM.
-  # cron: "*/1 * * * *" # execute at every 30 minutes
-  cron: "every day at eight" # TODO check if this is running.
+  # cron: "* * * * *" # execute at every 1 minutes
+  cron: "every day at eight"
   class: "ScheduledTaskJob"
